tests/builtin_uses/builtin_uses.exp
Error -------------------------------------------------------------- test.js:2:2

Cannot cast `o.foo` to string because number is incompatible with string.

Error: test.js:2
  2: (o.foo: string);
      ^^^^^ Cannot cast `o.foo` to string because number [1] is incompatible with string [2].
  References:
    1: var o = Object.freeze({ foo: 0 });
                                    ^ [1]: number
    2: (o.foo: string);
               ^^^^^^ [2]: string

Error ------------------------------------------------------------- test2.js:2:2

Cannot cast `o.foo` to string because number is incompatible with string.

Error: test2.js:2
  2: (o.foo: string);
      ^^^^^ Cannot cast `o.foo` to string because number [1] is incompatible with string [2].
  References:
    1: var o = Object.freeze({ foo: 0 });
                                    ^ [1]: number. See: test.js:1
    2: (o.foo: string);
               ^^^^^^ [2]: string


Found 2 errors
